--- a/views/held.jade
+++ b/views/held.jade
@@ -137,7 +137,7 @@ html(lang="de")
 						li
 							a(href="/ap/"+_id) Abenteuerpunkte
 						li
-							a(href="/taw/"+_id) Talente
+							a(href="/talente/"+_id) Talente
 						li
 							a(href="/char/"+_id) Eigenschaften
 						li
@@ -147,7 +147,7 @@ html(lang="de")
 						li
 							a Rituale
 						li
-							a Liturgien
+							a(href="/liturgien/"+_id) Liturgien
 
 		section(style="clear: both;")
 			h1.mitte= Person.Name
