--- a/views/system/edit-liturgie.jade
+++ b/views/system/edit-liturgie.jade
@@ -3,6 +3,7 @@ html
 	head
 		title Liturgie [#{name}] bearbeiten
 		meta(charset="utf-8")
+		link(rel="stylesheet", type="text/css", href="/dropout.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 		style.
 			body {
@@ -56,39 +57,17 @@ html
 						each __val, __key in {1:"I", 2:"II", 3:"III", 4:"IV", 5:"V", 6:"VI", 7:"VII"}
 							option(value=__key, selected=(grad ==__key))=__val
 				div
-					label(for="l_rd") Dauer
-					select#l_rd(name="rd", size="1")
-						option(selected=("Stoßgebet"==rd.split(" ")[0])) Stoßgebet
-						option(selected=("Gebet"==rd)) Gebet
-						option(selected=("Andacht"==rd)) Andacht
-						option(selected=("Zeremonie"==rd)) Zeremonie
-						option(selected=("Zyklus"==rd)) Zyklus
-					- var __res = /\d+/.exec(rd)
-					- var __val = __res ? __res[0] : 20
-					input#l_rd_sg(type="number", min="1", max="20", step="1", value=__val, title="nur bei Stoßgebeten", style="width: 3em; text-align: center;")
-					| &nbsp;Aktionen
+					label Ritualdauer
+					.dropout(data-name="rd", data-options="Stoßgebet (? A),Gebet,Andacht,Zeremonie,Zyklus", data-default=rd)
 				div
-					label(for="l_rw") Reichweite
-					select#l_rw(name="rw", size="1")
-						each __val in ["Selbst", "Berührung", "Sicht", "Fern"]
-							option(selected=(rw ==__val)?true:false)=__val
+					label Reichweite
+					.dropout(data-name="rw", data-options="Selbst,Berührung,Sicht,Fern", data-default=rw)
 				div
 					label(for="l_wd") Wirkungsdauer
 					input#l_wd(type="text", name="wd", placeholder="Wirkungsdauer", value=wd)
 				div
-					label(for="l_ziel") Ziel
-					select#l_ziel(name="ziel", size="1")
-						option(value="G", selected=(ziel=="G")) Geweihter
-						option(value="P", selected=(ziel=="P")) 1 Person/Objekt
-						option(value="PP", selected=(ziel=="PP")) ≤ 10 Pers./Obj.
-						option(value="PPP", selected=(ziel=="PPP")) ≤ 100 Pers./Obj.
-						option(value="PPPP", selected=(ziel=="PPPP")) ≤ 1.000 Pers./Obj.
-						option(value="P+P", selected=(ziel=="P+P")) 2 Personen gegenseitig
-						option(value="P+PP", selected=(ziel=="P+PP")) Person & Gruppe
-						option(value="Z", selected=(ziel=="Z")) ≤ 10 m
-						option(value="ZZ", selected=(ziel=="ZZ")) ≤ 100 m
-						option(value="ZZZ", selected=(ziel=="ZZZ")) ≤ 1.000 m
-						option(value="ZZZZ", selected=(ziel=="ZZZZ")) ≤ 10 km
+					label Ziel
+					.dropout(data-name="ziel", data-options="G,P,PP,PPP,PPPP,G+P,G+PP,P+P,P+PP,Z,ZZ,ZZZ,ZZZZ", data-default=ziel)
 				div#gott
 					label Zugehörigkeit
 					button#uni(type="button") universell
@@ -110,18 +89,40 @@ html
 			fieldset.submitter.mitte
 				button(type="submit") löschen
 		script.
-			$('#new').on("submit", function() {
-				var $rd = $('#l_rd');
-				var $sg = $('#l_rd_sg');
-				if ($rd.val() === "Stoßgebet") {
-					$rd.remove();
-					$('<input name="rd" type="hidden"/>').val("Stoßgebet (" + $sg.val() + " A)").appendTo(this);
-				}
-			});
 			$('#uni').on("click", function() {
 				$('#gott input').prop('checked', true);
 			});
 			$('#gott').on("click", ".spez button", function() {
 				var $boxes = $(this).closest('ul').find('input');
 				$boxes.prop('checked', !$boxes.prop('checked'));
+			});
+			$('.dropout').each(function() {
+				var $datasrc = $(this);
+				var options  = $datasrc.data('options');
+				var $text    = $('<input type="text"/>')
+					.prop('name', $datasrc.data('name'))
+					.val($datasrc.data('default'))
+				;
+				if (options && options.length) {
+					var $ul   = $('<ul/>').addClass('options');
+					var $down = $('<button type="button">▼</button>');
+					options.split(',').forEach(function(item) {
+						$('<li/>').text(item).appendTo($ul);
+					});
+					$down.on('click', function() {
+						$ul.toggle();
+					});    
+					$ul.on('click', 'li', function() {
+						$text.val(this.textContent);
+						$ul.hide();
+					});
+					$(this).append($ul, $text, $down);
+					var style   = $text.offset();
+					style.top  += $text.outerHeight();
+					style.width = $text.outerWidth() - 2;
+					$ul.css(style);
+				}
+				else {
+					$(this).append($text);
+				}
 			});
