Finished Liturgy editing. Display requirements and Delete clean-up still to do.

--- a/views/edit-held/liturgie.jade
+++ b/views/edit-held/liturgie.jade
@@ -2,10 +2,7 @@ mixin print(__data)
 	p!=JSON.stringify(__data)
 
 - function isAvailable(_charlist, _stdTalent) { 
-- 	var l = _charlist ? _charlist.length : 0; 
-- 	if (_stdTalent.standard) {
-- 		return true;
-- 	}
+- 	var l = _charlist ? _charlist.length : 0;
 - 	while (l--) { 
 - 		if (_charlist[l].name === _stdTalent.name) {
 - 			return true; 
@@ -28,8 +25,9 @@ html(lang="de")
 			nav a {
 				width: 10em;
 			}
-			.disabled {
-				color: #ddd;
+			.selected label {
+				font-weight: bold;
+				font-variant: small-caps;
 			}
 			main, aside {
 				padding: 0 5em;
@@ -58,37 +56,50 @@ html(lang="de")
 							td=__lk.name
 							td.mitte= __lk.wert
 		main
-			table.data-section.mitte.eigenschaften
-				caption Liturgien
-				colgroup
-					col(style="width: 4em;")
-					col
-					col(style="width: 12em")
-					col(style="width: 6em;")
-					col(span="2", style="width: 12em")
-				thead
-					tr
-						td
-						th Liturgie
-						th Dauer
-						th Ziel
-						th Reichweite
-						th Wirkungsdauer
-				tbody
-					- var __grad = {1:"I", 2:"II", 3:"III", 4:"IV", 5:"V", 6:"VI", 7:"VII"}
-					each __lit, __idx in _liturgien
-					- var __isAvailable  = isAvailable(Weihe.Liturgien, __lit)
+			form(action="/liturgien/"+_id, method="post", accept-charset="utf-8")
+				input(type="hidden", name="_method", value="put")
+				
+				table.data-section.mitte.eigenschaften
+					caption Liturgien
+					colgroup
+						col(style="width: 4em;")
+						col
+						col(style="width: 12em")
+						col(style="width: 6em;")
+						col(span="2", style="width: 12em")
+					thead
 						tr
 							td
-								input(type="hidden", name="Weihe.Liturgien[#{__idx}][_talent]", value=__lit._id)
-								input.lock(type="checkbox")
-							td.links
-								label.name=__lit.name + " ("+__grad[__lit.grad]+")"
-							td=__lit.rd
-							td=__lit.ziel
-							td=__lit.rw
-							td=__lit.wd
-			a#save
-			.mitte
-				button(type="submit", disabled) speichern
+							th Liturgie
+							th Dauer
+							th Ziel
+							th Reichweite
+							th Wirkungsdauer
+					tbody
+						- var __grad = {1:"I", 2:"II", 3:"III", 4:"IV", 5:"V", 6:"VI", 7:"VII"}
+						each __lit, __idx in _liturgien
+							- var __isAvailable  = isAvailable(Weihe.Liturgien, __lit)
+							tr(class=__isAvailable?'selected':'')
+								td
+									input.unlock(type="hidden", name="Weihe.Liturgien[#{__idx}]", value=__lit._id, disabled=!__isAvailable)
+									input.isactive(type="checkbox", id="Liturgie_"+__idx, checked=__isAvailable)
+								td.links
+									label(for="Liturgie_"+__idx)=__lit.name + " ("+__grad[__lit.grad]+")"
+								td=__lit.rd
+								td=__lit.ziel
+								td=__lit.rw
+								td=__lit.wd
+				a#save
+				.mitte
+					button(type="submit") speichern
+		script.
+			$('label').on('click', function() {
+				// click is faster than label => checkbox
+				var $tr    = $(this).closest('tr');
+				var $check = $tr.find('.isactive');
+				if ($check.length) {
+					$tr.find('.unlock').prop('disabled', $check.prop('checked'));
+					$tr.toggleClass('selected');
+				}
+			});
 			
