Some bug fixes related to the AsP values.

--- a/views/edit-held/basiswerte.jade
+++ b/views/edit-held/basiswerte.jade
@@ -43,7 +43,7 @@ html(lang="de")
 						tr
 							td#asp(title="Zum (De-)Aktivieren klicken") Astralenergie
 							td 
-								input(name="modifikatoren[AsP][start]", type="number", min="0", step="1", value=modifikatoren.AsP.start)
+								input(name="modifikatoren[AsP][start]", type="number", step="1", value=modifikatoren.AsP.start)
 							td
 								input(name="modifikatoren[AsP][add]",   type="number", min="0", step="1", value=modifikatoren.AsP.add)
 							td
