--- a/views/edit-held/char.jade
+++ b/views/edit-held/char.jade
@@ -145,7 +145,7 @@ html(lang="de")
 						tr
 							td#asp(title="Zum (De-)Aktivieren klicken") Astralenergie
 							td 
-								input(name="modifikatoren[AsP][start]", type="number", min="0", step="1", value=modifikatoren.AsP.start)
+								input(name="modifikatoren[AsP][start]", type="number", step="1", value=modifikatoren.AsP.start)
 							td
 								input(name="modifikatoren[AsP][add]",   type="number", min="0", step="1", value=modifikatoren.AsP.add)
 							td
@@ -155,7 +155,7 @@ html(lang="de")
 						tr
 							td#kap(title="Zum (De-)Aktivieren klicken") Karmaenergie
 							td 
-								input(name="modifikatoren[KaP][start]", type="number", min="0", step="12", value=modifikatoren.KaP.start)
+								input(name="modifikatoren[KaP][start]", type="number", min="0", step="1", value=modifikatoren.KaP.start)
 							td
 								input(name="modifikatoren[KaP][add]",   type="number", min="0", step="1", value=modifikatoren.KaP.add)
 							td
