--- a/views/edit-held/sf.jade
+++ b/views/edit-held/sf.jade
@@ -228,7 +228,7 @@ html(lang="de")
 								li
 									strong Repräsentation:
 								- var __count = 0
-								each val, key in {"Bor":"Borbaradianer", "Elf":"Elf", "Dru":"Druide", "Geo":"Geode", "Mag":"Gildenmagier", "Hex":"Hexe", "Ach":"Kristallomant", "Srl":"Scharlatan", "Sch":"Schelm"}
+								each val, key in {"Bor":"Borbaradianer", "Elf":"Elf", "Dru":"Druide", "Geo":"Geode", "Mag":"Gildenmagier", "Hex":"Hexe", "Ach":"Kristallomant", "Dil":"Magiedilletant", "Srl":"Scharlatan", "Sch":"Schelm"}
 									- var checkval = "Repräsentation ("+val+")"
 									- var __isSet  = (SF.magisch.indexOf(checkval) !== -1)
 									li
