--- a/views/geweiht.jade
+++ b/views/geweiht.jade
@@ -53,7 +53,7 @@ html(lang="de")
 						li
 							a(href="/sf/"+_id) Sonderfertigkeiten
 						li
-							a(href="/zauber/"+_id) Liturgien
+							a(href="/liturgien/"+_id) Liturgien
 						li
 							a(href="/talente/"+_id+"#jLKW") Liturgiekenntnis
 
