--- a/views/new-char.jade
+++ b/views/new-char.jade
@@ -146,7 +146,7 @@ html(lang="de")
 						tr
 							td#asp(title="Zum (De-)Aktivieren klicken") Astralenergie
 							td 
-								input(name="modifikatoren[AsP][start]", type="number", min="0", step="1")
+								input(name="modifikatoren[AsP][start]", type="number", step="1")
 							td
 								input(name="modifikatoren[AsP][add]",   type="number", min="0", step="1")
 							td
