--- a/views/edit-held/liturgie.jade
+++ b/views/edit-held/liturgie.jade
@@ -29,11 +29,17 @@ html(lang="de")
 				font-weight: bold;
 				font-variant: small-caps;
 			}
-			main, aside {
+			section {
 				padding: 0 5em;
 			}
 			tbody tr:hover {
 				background-color: silver;
+			}
+			input {
+				text-align: inherit;
+			}
+			#template {
+				display: none;
 			}
 	body
 		a#top
@@ -43,23 +49,62 @@ html(lang="de")
 			a(href="/held/"+_id)= "⇒ "+Person.Name.split(' ')[0]
 		h1.mitte
 			a(href="/held/"+_id)= Person.Name
-		aside
-			table.data-section.mitte.eigenschaften
+		section
+			table.data-section.eigenschaften#lkw
 				caption Liturgiekenntnis
+				colgroup
+					col(style="width: 2em;")
+					col
+					col(span="2", style="width: 10em;")
 				thead
 					tr
+						td
 						th Gottheit
-						th LkW
+						th Lern
+						th TaW
+				tfoot
+					tr
+						td
+						td 
+							select(size="1", style="width: 25%;")
+								each __lk in _gottheiten
+									option(value=__lk.name, data-id=__lk._id)=__lk.name
+						td.mitte(colspan="2")
+							button.add neue Liturgiekenntnis
+				tbody#template
+					tr
+						td.mitte(style="padding: 0.2em;")
+							input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[{index}][_talent]", value="{id}")
+							input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[{index}][name]", value="{name}", id="lk{index}", checked)
+						td
+							label(for="lk{index}") {name}
+						td.mitte
+							select.unlock(size="1", name="Weihe.Liturgiekenntnis[{index}][Lernstufe]")
+								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
+									option= kat
+						td.mitte
+							input.unlock(type="number", name="Weihe.Liturgiekenntnis[{index}][wert]", min="3", max="35", step="1", value="3")
 				tbody
 					each __lk in Weihe.Liturgiekenntnis
 						tr
-							td=__lk.name
-							td.mitte= __lk.wert
-		main
+							td.mitte(style="padding: 0.2em;")
+								input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[#{key}][_talent]", value=__lk._id)
+								input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[#{key}][name]", value=__lk.name, id="lk"+key, checked)
+							td
+								label(for="lk"+key)= __lk.name
+							td.mitte
+								select.unlock(size="1", name="Weihe.Liturgiekenntnis[#{key}][Lernstufe]")
+									each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
+										option(selected=__lk.Lernstufe === kat)= kat
+							td.mitte
+								input.unlock(type="number", name="Weihe.Liturgiekenntnis[#{key}][wert]", min="3", max="35", step="1", value=__lk.wert)
+					
+						
+		section
 			form(action="/liturgien/"+_id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 				
-				table.data-section.mitte.eigenschaften
+				table.data-section.mitte.eigenschaften#lit
 					caption Liturgien
 					colgroup
 						col(style="width: 4em;")
@@ -93,7 +138,7 @@ html(lang="de")
 				.mitte
 					button(type="submit") speichern
 		script.
-			$('label').on('click', function() {
+			$('#lit label').on('click', function() {
 				// click is faster than label => checkbox
 				var $tr    = $(this).closest('tr');
 				var $check = $tr.find('.isactive');
@@ -102,4 +147,3 @@ html(lang="de")
 					$tr.toggleClass('selected');
 				}
 			});
-			
