Editing of Liturgie and Liturgiekenntnis should be finished.

--- a/views/edit-held/liturgie.jade
+++ b/views/edit-held/liturgie.jade
@@ -4,7 +4,7 @@ mixin print(__data)
 - function isAvailable(_charlist, _stdTalent) { 
 - 	var l = _charlist ? _charlist.length : 0;
 - 	while (l--) { 
-- 		if (_charlist[l].name === _stdTalent.name) {
+- 		if (String(_charlist[l]._id) == String(_stdTalent._id)) {
 - 			return true; 
 - 		}
 - 	} 
@@ -25,7 +25,7 @@ html(lang="de")
 			nav a {
 				width: 10em;
 			}
-			.selected label {
+			#lit .selected label {
 				font-weight: bold;
 				font-variant: small-caps;
 			}
@@ -49,61 +49,60 @@ html(lang="de")
 			a(href="/held/"+_id)= "⇒ "+Person.Name.split(' ')[0]
 		h1.mitte
 			a(href="/held/"+_id)= Person.Name
-		section
-			table.data-section.eigenschaften#lkw
-				caption Liturgiekenntnis
-				colgroup
-					col(style="width: 2em;")
-					col
-					col(span="2", style="width: 10em;")
-				thead
-					tr
-						td
-						th Gottheit
-						th Lern
-						th TaW
-				tfoot
-					tr
-						td
-						td 
-							select(size="1", style="width: 25%;")
-								each __lk in _gottheiten
-									option(value=__lk.name, data-id=__lk._id)=__lk.name
-						td.mitte(colspan="2")
-							button.add neue Liturgiekenntnis
-				tbody#template
-					tr
-						td.mitte(style="padding: 0.2em;")
-							input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[{index}][_talent]", value="{id}")
-							input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[{index}][name]", value="{name}", id="lk{index}", checked)
-						td
-							label(for="lk{index}") {name}
-						td.mitte
-							select.unlock(size="1", name="Weihe.Liturgiekenntnis[{index}][Lernstufe]")
-								each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-									option= kat
-						td.mitte
-							input.unlock(type="number", name="Weihe.Liturgiekenntnis[{index}][wert]", min="3", max="35", step="1", value="3")
-				tbody
-					each __lk in Weihe.Liturgiekenntnis
+		form(action="/liturgien/"+_id, method="post", accept-charset="utf-8")
+			input(type="hidden", name="_method", value="put")
+			a#liturgiekenntnis
+			section
+				table.data-section.eigenschaften#lkw
+					caption Liturgiekenntnis
+					colgroup
+						col(style="width: 2em;")
+						col
+						col(span="2", style="width: 15em;")
+					thead
+						tr
+							td
+							th Gottheit
+							th Lern
+							th TaW
+					tfoot
+						tr
+							td
+							td 
+								select#newlk(size="1", style="width: 25%;")
+									each __lk in _gottheiten
+										option(value=__lk.name, data-id=String(__lk._id).replace(/\W+/g, ''))=__lk.name
+							td.mitte(colspan="2")
+								button#addlk(type="button") neue Liturgiekenntnis
+					tbody#template
 						tr
 							td.mitte(style="padding: 0.2em;")
-								input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[#{key}][_talent]", value=__lk._id)
-								input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[#{key}][name]", value=__lk.name, id="lk"+key, checked)
+								input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[{index}][_talent]", value="{id}")
+								input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[{index}][name]", value="{name}", id="lk{index}", checked)
 							td
-								label(for="lk"+key)= __lk.name
+								label(for="lk{index}") {name}
 							td.mitte
-								select.unlock(size="1", name="Weihe.Liturgiekenntnis[#{key}][Lernstufe]")
+								select.unlock(size="1", name="Weihe.Liturgiekenntnis[{index}][Lernstufe]")
 									each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-										option(selected=__lk.Lernstufe === kat)= kat
+										option= kat
 							td.mitte
-								input.unlock(type="number", name="Weihe.Liturgiekenntnis[#{key}][wert]", min="3", max="35", step="1", value=__lk.wert)
-					
-						
-		section
-			form(action="/liturgien/"+_id, method="post", accept-charset="utf-8")
-				input(type="hidden", name="_method", value="put")
-				
+								input.unlock(type="number", name="Weihe.Liturgiekenntnis[{index}][wert]", min="3", max="35", step="1", value="3")
+					tbody#collection
+						each __lk, key in Weihe.Liturgiekenntnis
+							tr
+								td.mitte(style="padding: 0.2em;")
+									input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[#{key}][_talent]", value=__lk._talent._id)
+									input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[#{key}][name]", value=__lk.name, id="lk"+key, checked)
+								td
+									label(for="lk"+key)= __lk.name
+								td.mitte
+									select.unlock(size="1", name="Weihe.Liturgiekenntnis[#{key}][Lernstufe]")
+										each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
+											option(selected=__lk.Lernstufe === kat)= kat
+								td.mitte
+									input.unlock(type="number", name="Weihe.Liturgiekenntnis[#{key}][wert]", min="3", max="35", step="1", value=__lk.wert)
+			a#liturgien	
+			section
 				table.data-section.mitte.eigenschaften#lit
 					caption Liturgien
 					colgroup
@@ -138,7 +137,7 @@ html(lang="de")
 				.mitte
 					button(type="submit") speichern
 		script.
-			$('#lit label').on('click', function() {
+			$('table').on('click', 'label', function() {
 				// click is faster than label => checkbox
 				var $tr    = $(this).closest('tr');
 				var $check = $tr.find('.isactive');
@@ -146,4 +145,24 @@ html(lang="de")
 					$tr.find('.unlock').prop('disabled', $check.prop('checked'));
 					$tr.toggleClass('selected');
 				}
+			});
+			$('form').on('submit', function() {
+				$('#template').remove();
+			});
+			$('#addlk').on('click', function() {
+				var $option = $('#newlk :selected');
+				var $row    = $('#template tr').clone();
+				var index   = $(this).closest('table').find('#collection tr').length;
+				var $sec = $row.find('input').eq(1);
+				$sec.val($option.val());
+				$sec.prop('id', $sec.prop('id').replace("{index}", index));
+				var $lab = $row.find('label');
+				$lab.text($option.val());
+				$lab.prop('for', $lab.prop('for').replace("{index}", index));
+				$row.find('input').eq(0).val($option.data('id'));
+				$row.find('select').val('E');
+				$row.find('*[name]').each(function() {
+					this.name = this.name.replace("{index}", index);
+				});
+				$('#collection').append($row);
 			});
